# causal_bench

./: .gitignore  CHANGELOG.md  README.md  _quarto.yml  index.qmd  pyproject.toml  requirements.txt
causal_bench/: __main__.py  bootstrap.py  crossfit.py  hal.py  har.py  ltb.py  measurement_error.py  metrics.py  propensity_guards.py  runner.py  sca_weighting.py  sequential.py  super_learner.py  target_trial.py  viz.py
causal_bench/adaptation/: filters.py  metrics.py
causal_bench/detectors/: exogenous.py  metrics.py  zero_flow_ci.py
causal_bench/dgp/: augmentation.py  bias_amplification.py  calendar_confounding.py  config.py  dialogue_missingness.py  hawthorne.py  immortal_time.py  joint_hierarchy.py  keyed_random.py  ordinal_pro.py  point_treatment.py  registry.py  sca_registry.py  scenarios.py  survival.py  transport.py  user_sim.py
causal_bench/diagnostics/: __init__.py  borrowing_informativeness.py  cobalt.py  design_validity.py  embedding_eda.py  hierarchy_probe.py  localization.py  rhm_grammar.py  struct_s.py  theta_time_map.py  tree_reconstruction.py
causal_bench/estimators/: __init__.py  aipw.py  base.py  bcf_bart.py  clmm_ordinal.py  concrete_clinical_rmtif.py  concrete_pro_win_ratio.py  concrete_psnb.py  concrete_rmst.py  concrete_simultaneous.py  concrete_win_ratio.py  cox.py  effectxshift.py  hawthorne.py  hierarchical.py  ipw.py  kaplan_meier.py  ltmle.py  naive.py  overlap.py  point.py  pointwise_rmst.py  reward_missingness.py  subgroup.py  three_level_bhm.py  tmle_ipcw.py  tmle_ipcw_boot.py  (+2 more)
experiments/: demo_diffuse_directly.py  demo_localization.py  demo_smc_ipcw.py  demo_struct_s.py  demo_tangent_dsm.py  diagnose_se_coverage.py  exp10_win_ratio.py  exp11_strata.py  exp11_transport.py  exp12_hawthorne.py  exp12_simultaneous.py  exp13_censoring_sweep.py  exp14_synthetic_augmentation.py  exp15_sequential_monitoring.py  exp16_encircle_calibrated.py  exp17_transport.py  exp18_hawthorne.py  exp19_hierarchical_oc.py  exp1_censoring.py  exp20_tipping_point_borrowing.py  exp21_hte_subgroup.py  exp22_mbias_sensitivity.py  exp23_immortal_time.py  exp24_site_clustering.py  exp25_ordinal_pro.py  exp26_user_sim_detection.py  exp27_dialogue_mnar.py  exp28_q2_adaptation.py  exp29_balance_diagnostics.py  exp2_positivity.py  exp30_registry_balance.py  exp31_covariate_measurement_error.py  exp32_clever_covariate_me.py  exp33_donsker_learners.py  exp33b_donsker_nuisance_tmle.py  exp36_three_level_fidelity.py  exp37_compounding_shift.py  exp38_frozen_model_shift.py  exp39_ci_calibration.py  exp39_zero_flow_ci.py  (+11 more)
r_scripts/: bcf_bart_bridge.R  cobalt_bridge.R  concrete_bridge.R  effectxshift_bridge.R
scripts/: alignment_validate.py  detectors_validate.py  exp41_multigpu.py  geodesic_validate.py  score_net_compile_modes.py  score_net_perf.py  smc_alltoall_validate.py  smc_distributed_validate.py  smc_run_distributed_validate.py  spectral_validate.py  stratified_ess_validate.py  tangent_dsm_validate.py
tests/: test_adaptation.py  test_alignment.py  test_bootstrap.py  test_borrowing_calibration.py  test_borrowing_informativeness.py  test_borrowing_scale.py  test_bp_batch_equivalence.py  test_canonical_ks.py  test_clmm_ordinal.py  test_cobalt_bridge.py  test_concrete_bridge.py  test_detectors.py  test_device_gating.py  test_dgp.py  test_diagnostics.py  test_diagnostics_design_validity.py  test_diagnostics_embedding.py  test_dialogue_missingness.py  test_diffusion_class_overlap.py  test_estimators.py  test_exogenous_detector.py  test_exp14_augmentation.py  test_exp19_hierarchical.py  test_exp22_mbias.py  test_exp23_immortal_time.py  test_exp24_clustering.py  test_exp28_adaptation.py  test_exp29_balance_diagnostics.py  test_exp30_registry_balance.py  test_exp31_covariate_measurement_error.py  test_exp32_clever_covariate_me.py  test_exp33_donsker_learners.py  test_exp33b_donsker_nuisance_tmle.py  test_exp37_compounding_shift.py  test_exp38_frozen_model_shift.py  test_exp40_bias_amplification.py  test_exp41.py  test_exp41_multigpu.py  test_exp42_calendar_confounding.py  test_gen_calibrate.py  (+63 more)
(+83 files in other folders)
