[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal_bench"
version = "0.1.0"
description = "Monte Carlo benchmarking of causal estimators for clinical trials"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lifelines>=0.27",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
r = ["rpy2>=3.5"]
storage = ["pyarrow>=12"]
all = ["rpy2>=3.5", "pyarrow>=12"]

[tool.setuptools.packages.find]
where = ["."]
include = ["causal_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
