[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal_bench"
version = "0.3.0"
description = "Monte Carlo benchmarking of causal estimators for clinical trials"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lifelines>=0.27",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "tqdm>=4.65",
    "rpy2>=3.6.7",
    "pydantic>=2.6",
    "pandera>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
gpu = ["cupy-cuda12x>=12", "torch>=2.2"]
r = ["rpy2>=3.5"]
storage = ["pyarrow>=12"]
notebook = ["Pillow>=10", "jupyter>=1.0", "jupyter-cache>=0.6", "nbformat>=5.9"]
# The bayes stack (arviz>=1.0, which the CLMM estimator's az.hdi(prob=) 1.x API
# needs) requires Python >=3.12; requires-python is >=3.10. Gate it with an
# environment marker so `uv` can resolve across the whole declared range —
# without it, resolution is unsatisfiable repo-wide. On 3.10/3.11 the bayes
# extra installs nothing and the CLMM tests skip (they already guard on the
# bambi import).
bayes = [
    "bambi>=0.13; python_version >= '3.12'",
    "pymc>=5.0; python_version >= '3.12'",
    "arviz>=1.0; python_version >= '3.12'",
]
# JAX/NumPyro NUTS backend for PyMC (pm.sample(nuts_sampler="numpyro")) — the
# A100 Fidelity-path GPU sampler for the three-level BHM (#40). Same 3.12 gate as
# the bayes stack (needs pymc). On the box, install jax[cuda] instead of jax[cpu].
bayes-gpu = [
    "numpyro>=0.15; python_version >= '3.12'",
    "jax>=0.4; python_version >= '3.12'",
]
all = [
    "rpy2>=3.5", "pyarrow>=12", "Pillow>=10",
    "bambi>=0.13; python_version >= '3.12'",
    "pymc>=5.0; python_version >= '3.12'",
    "arviz>=1.0; python_version >= '3.12'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["causal_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# macOS Accelerate BLAS raises spurious FP flags on degenerate/empty matmuls
# (HAR dominance kernel, sklearn linear solvers); results are finite. Narrowly
# silence just these so real warnings stay visible.
filterwarnings = [
    "ignore:invalid value encountered in matmul:RuntimeWarning",
    "ignore:divide by zero encountered in matmul:RuntimeWarning",
    "ignore:overflow encountered in matmul:RuntimeWarning",
]
